# azurfetcher

./: LICENSE  README.md  pyproject.toml
src/azurfetcher/: __init__.py
