[project]
name = "azurfetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "platformdirs>=4.10.0",
    "questionary>=2.1.1",
    "requests>=2.34.2",
    "term-image",
    "tomlkit>=0.15.0",
]
[project.scripts]
azurfetcher = "azurfetcher:cli"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
term-image = { git = "https://github.com/AnonymouX47/term-image.git" }
